@@ -1,9 +1,10 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2006-05-25
+ChangeLog - 2006-05-30
 
 Version 0.2.0 (under dev!):
+   * fixed crash with "register" function in plugin scripts (bug #16701)
    * fixed random crash at exit (/quit or /upgrade) with splited windows
 
 Version 0.1.9 (2006-05-25):
